EDSC-4052: simplify HTML, split out css; fix line too long warnings

--- a/static/src/js/components/AccessMethod/AccessMethod.scss
+++ b/static/src/js/components/AccessMethod/AccessMethod.scss
@@ -135,6 +135,13 @@
 .mb-3 {
   white-space: nowrap;
 }
+.swodlr-advanced-options-container {
+  display: flex;
+}
+
+.swodlr-advanced-options-item {
+  flex: 1;
+}
 
 .table td, .table th {
   padding: .625rem;
